[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/menus/title/logo/logo.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menus/title/title_bg/space_loop.png" type="Texture" id=2]
[ext_resource path="res://scenes/menus/title/title_bg/purple_haze.png" type="Texture" id=3]
[ext_resource path="res://scenes/menus/title/space.gd" type="Script" id=4]
[ext_resource path="res://scenes/menus/title/title_bg/planet.gd" type="Script" id=5]
[ext_resource path="res://scenes/menus/title/title.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/menus/title/title_bg/silhouettes.png" type="Texture" id=7]
[ext_resource path="res://scenes/menus/title/logo/logo_outline.png" type="Texture" id=8]
[ext_resource path="res://scenes/menus/title/title_bg/light_beam.png" type="Texture" id=9]
[ext_resource path="res://scenes/menus/title/title_bg/magmoon.png" type="Texture" id=10]
[ext_resource path="res://scenes/menus/title/title_bg/magmoon.gd" type="Script" id=11]
[ext_resource path="res://scenes/menus/title/title_bg/mushmoon.gd" type="Script" id=12]
[ext_resource path="res://scenes/menus/title/title_bg/mushmoon.png" type="Texture" id=13]
[ext_resource path="res://fonts/bylight/bylight.tres" type="DynamicFont" id=14]
[ext_resource path="res://scenes/menus/title/start_text.gd" type="Script" id=15]
[ext_resource path="res://scenes/menus/title/main_menu/main_menu.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/menus/title/title.gd" type="Script" id=17]
[ext_resource path="res://scenes/menus/title/main_menu/menu_day.mp3" type="AudioStream" id=18]
[ext_resource path="res://scenes/menus/title/title_loop.gd" type="Script" id=19]
[ext_resource path="res://scenes/menus/title/title_cover.gd" type="Script" id=20]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 17 )

[node name="Space" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
script = ExtResource( 4 )

[node name="LightBeam" type="TextureRect" parent="Space"]
anchor_right = 1.0
texture = ExtResource( 9 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Magmoon" type="Sprite" parent="."]
texture = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Mushmoon" type="Sprite" parent="."]
texture = ExtResource( 13 )
script = ExtResource( 12 )

[node name="Planet" type="TextureRect" parent="."]
anchor_right = 1.0
margin_top = 166.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 194 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
script = ExtResource( 5 )

[node name="Silhouettes" type="TextureRect" parent="Planet"]
anchor_right = 1.0
margin_top = 119.0
rect_pivot_offset = Vector2( 0, 75 )
texture = ExtResource( 7 )
stretch_mode = 2

[node name="Flash" type="ColorRect" parent="Planet"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
color = Color( 0.976471, 0.909804, 0.909804, 0 )

[node name="Logo" parent="." instance=ExtResource( 1 )]
position = Vector2( 302, 109 )

[node name="Flash" type="Sprite" parent="Logo"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 8 )

[node name="TitleLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0
bus = "Music"
script = ExtResource( 19 )

[node name="MenuLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -80.0
bus = "Music"

[node name="StartText" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 265.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 321, 0 )
custom_fonts/font = ExtResource( 14 )
text = "Press Z to start!"
align = 1
script = ExtResource( 15 )

[node name="Menu" parent="." instance=ExtResource( 16 )]
visible = false

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 20 )

[node name="Version" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -15.0
rect_pivot_offset = Vector2( -2, 15 )
custom_fonts/font = ExtResource( 14 )
text = "v0.X.X"
